--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "@emotion/styled": "^11.11.5",
     "@mui/icons-material": "^5.15.14",
     "@mui/material": "^5.15.14",
+    "@supabase/supabase-js": "^2.42.5",
     "next": "14.1.0",
     "next-auth": "^4.24.7",
     "react": "^18",
